--- a/theme/assets/standard-page.html
+++ b/theme/assets/standard-page.html
@@ -35,9 +35,10 @@
  }
 
  .col-padding {
-     padding: 5px !important;
+     padding: 2px !important;
  }
  
+ .anvil-role-game-list
  .nav {
      position: absolute;
      top: 0;
