--- a/theme/assets/standard-page.html
+++ b/theme/assets/standard-page.html
@@ -35,10 +35,13 @@
  }
 
  .col-padding {
-     padding: 2px !important;
+     padding: 3px 0px !important;
  }
  
- .anvil-role-game-list
+  .anvil-role-game-list {
+    padding: 0px !important;
+  }
+  
  .nav {
      position: absolute;
      top: 0;
