cards margin 0px !important

--- a/theme/assets/standard-page.html
+++ b/theme/assets/standard-page.html
@@ -210,6 +210,7 @@
 
  .cards > .anvil-container {
      outline: none !important;
+     margin: 0px !important;
  }
 
  .cards .anvil-container .anvil-container,
@@ -231,7 +232,7 @@
  .cards .anvil-container .anvil-container .anvil-container {
      box-shadow: none;
      background-color: transparent;
-     padding: 0;
+     padding: 0px;
  }
 
  .designer .anvil-highlight .cards .anvil-container .anvil-container .anvil-container {
