--- a/theme/assets/standard-page.html
+++ b/theme/assets/standard-page.html
@@ -35,11 +35,16 @@
  }
 
  .col-padding {
-     padding: 3px 0px !important;
+     padding: 0px 0px !important;
  }
  
   .anvil-role-game-list {
+    margin: 3px 0px !important;
+  }
+  
+  .anvil-role-game-container {
     padding: 0px !important;
+    margin: 0px !important;
   }
   
  .nav {
@@ -210,7 +215,6 @@
 
  .cards > .anvil-container {
      outline: none !important;
-     margin: 0px !important;
  }
 
  .cards .anvil-container .anvil-container,
