--- a/theme/assets/standard-page.html
+++ b/theme/assets/standard-page.html
@@ -10,11 +10,18 @@
      box-sizing: border-box;
  }
 
+ html {
+    max-width: 100%;
+    overflow-x: hidden;  
+ }  
+
  body {
      background-color: #d7d7d7;
      font-family: "Roboto";
      margin: 0;
      min-height: 100%;
+	 max-width: 100%;
+     overflow-x: hidden;
  }
 
  body.anvil-show-banner {
@@ -39,6 +46,7 @@
  }
  
   .anvil-role-game-list {
+    padding: 0px !important;
     margin: 3px 0px !important;
   }
   
