margin for login

--- a/theme/assets/standard-page.html
+++ b/theme/assets/standard-page.html
@@ -55,6 +55,10 @@
     margin: 0px !important;
   }
   
+  .anvil-role-dialog {
+    padding: 6px !important;
+  }
+  
  .nav {
      position: absolute;
      top: 0;
