refactored update_connections

--- a/theme/assets/standard-page.html
+++ b/theme/assets/standard-page.html
@@ -37,7 +37,7 @@
  }
 
  .placeholder {
-     padding: 2px;
+     padding: 0px;
      border: 2px dashed #888;
  }
 
@@ -231,8 +231,8 @@
 
  .cards .anvil-container .anvil-container,
  .designer .anvil-highlight .cards .anvil-container .anvil-container {
-     background-color: white;
-     box-shadow: 1px 2px 4px #888;
+     background-color: transparent;
+     box-shadow: none /* 1px 2px 4px #888; */
 
      /* Font back to defaults */
      font-weight: normal;
