--- a/theme/assets/standard-page.html
+++ b/theme/assets/standard-page.html
@@ -47,11 +47,12 @@
  
   .anvil-role-game-list {
     padding: 0px !important;
-    margin: 3px 0px !important;
+    margin: 0px !importand;
+    margin-top: 4px !important;
   }
   
   .anvil-role-game-container {
-    padding: 0px !important;
+    padding: 0px 0px !important;
     margin: 0px !important;
   }
   
