--- a/theme/assets/standard-page.html
+++ b/theme/assets/standard-page.html
@@ -21,7 +21,7 @@
      margin: 0;
      min-height: 100%;
 	 max-width: 100%;
-     overflow-x: hidden;
+     overflow: hidden;
  }
 
  body.anvil-show-banner {
